{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 244,
  "lineage": "e491c73a-733c-4fcc-7f72-f11cb16aabbb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "radas-group-project-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:129033205317:security-group/sg-0b4c4d295f59e7d8b",
            "description": "security group for the museum database",
            "egress": [],
            "id": "sg-0b4c4d295f59e7d8b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1433
              }
            ],
            "name": "radas-group-project-sg",
            "name_prefix": "",
            "owner_id": "129033205317",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01b7a51a09d27de04"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "129033205317",
            "id": "sg-0b4c4d295f59e7d8b",
            "region": "eu-west-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_TCP_1433_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 1433,
            "id": "sgrule-1826290430",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-2",
            "security_group_id": "sg-0b4c4d295f59e7d8b",
            "security_group_rule_id": "sgr-0f5b99bfd2174423f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 1433,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.radas-group-project-sg"
          ]
        }
      ]
    }
  ]
}